--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   <link rel="icon" href="./logo (2).png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="VANSH PORTFOLIO"/>
     <title>Vansh Portfolio</title>
   </head>
   <body>
